--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
-    "motion": "^12.23.24"
+    "motion": "^12.23.24",
+    "three": "^0.180.0"
   }
 }
